--- a/superVector/superVector.vcxproj
+++ b/superVector/superVector.vcxproj
@@ -130,7 +130,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Super_Vector.h" />
+    <ClInclude Include="Super_Vector_template.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
