--- a/superVector/superVector.vcxproj.filters
+++ b/superVector/superVector.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Super_Vector.h">
+    <ClInclude Include="Super_Vector_template.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
